Add cors secrets to be parsed in cors config